# etl-duckdb-deploy

./: .env  README.md  a.py  duckdb.db  pipeline_0.py  pipeline_01.py  pyproject.toml
